most of tests fixed

--- a/cz_app/lib/l10n/app_en.arb
+++ b/cz_app/lib/l10n/app_en.arb
@@ -22,5 +22,140 @@
   "registerEmailRequired": "The email field is required",
   "registerValidEmail": "Please enter a valid email address",
   "registerContainerText": "Register for CZ employees",
-  "registerSuccessMessage": "Registration is successful! Wait for your account to be verified."
+  "registerSuccessMessage": "Registration is successful! Wait for your account to be verified.",
+  "failedToRetrieveDepartments": "Failed to retrieve departments from the backend.",
+  "appErrorPrefix": "Application error:",
+  "somethingWentWrongErrorMessage": "Error: an error occurred.",
+  "createNewDepartmentText": "Create a new department here.",
+  "newDepartmentNameHint": "Department name",
+  "newDepartmentNameRequired": "A name for the department is required.",
+  "departmentCreatedSnackbarMessage": "Department created.",
+  "createDepartmentButtonText": "Create Department",
+  "departmentUpdatedSnackbarMessage": "Department updated.",
+  "updateDepartmentButtonText": "Update Department",
+  "departmentOverviewHeaderText": "Overview of all departments.",
+  "noDepartmentsFoundText": "No departments found.",
+  "departmentNameHeaderText": "Department Name",
+  "newDepartmentButtonText": "New Department",
+  "editButtonText": "Edit",
+  "deleteButtonText": "Delete",
+  "deleteDepartmentDialogTitle": "Delete Department",
+  "deleteDepartmentDialogMessage": "Are you sure you want to delete this department?",
+  "deleteDepartmentDialogCancelButtonText": "Cancel",
+  "deleteDepartmentDialogDeleteButtonText": "Delete",
+  "departmentOverviewText": "Overview of all departments.",
+  "noDepartmentsFoundText": "No departments found.",
+  "departmentNameColumnText": "Department Name",
+  "newDepartmentButtonText": "New Department",
+  "editButtonText": "Edit",
+  "deleteButtonText": "Delete",
+  "deleteDepartmentDialogTitle": "Delete Department",
+  "deleteDepartmentDialogMessage": "Are you sure you want to delete this department?",
+  "deleteDepartmentDialogCancelButtonText": "Cancel",
+  "deleteDepartmentDialogDeleteButtonText": "Delete",
+  "fetchDepartmentsError": "Failed to fetch departments from the backend.",
+  "fetchEmployeesError": "Failed to fetch employees from the backend.",
+  "fetchReferralsError": "Failed to fetch open referrals from the backend.",
+  "fetchEmployeesError": "Failed to fetch employees from the backend.",
+  "fetchReferralsError": "Failed to fetch open referrals from the backend.",
+  "noDepartmentsFound": "No departments found.",
+  "noEmployeesFound": "No employees found.",
+  "noOpenReferrals": "Currently, there are no open referrals.",
+  "employeeLabel": "Employee",
+  "emailLabel": "Email",
+  "referralCountLabel": "Referral Count",
+  "referralCountPrefix": "Referral Count:",
+  "nameLabel": "Name",
+  "statusLabel": "Status",
+  "linkedinLabel": "LinkedIn",
+  "applicationDateLabel": "Applied On",
+  "linkCopiedMessage": "The link has been copied to your clipboard.",
+  "openApplicationsButton": "Open Applications",
+  "fetchChartDataError": "Failed to fetch chart data from the backend.",
+  "failedToRetrieveReferrals": "Failed to retrieve referrals from the backend.",
+  "referralLabel": "Referrals",
+  "totalReferralCountLabel": "Total Referral Count",
+  "successfulReferralCountLabel": "Successful Referral Count",
+  "dataLoadError": "An error occurred while loading the data.",
+  "applicantNameLabel": "Applicant Name",
+  "statusLabel": "Status",
+  "noReferralsFoundMessage": "No referrals found.",
+  "referralsLoadFailedMessage": "Failed to load referrals.",
+  "approvedLabel": "Approved",
+  "pendingLabel": "Pending",
+  "infoLabel": "Information about:",
+  "nameLabel": "Name:",
+  "emailLabel": "Email:",
+  "phoneNumberLabel": "Phone number:",
+  "linkedinLabel": "Linkedin:",
+  "linkCopiedMessage": "The link has been copied.",
+  "statusLabel": "Status:",
+  "dateLabel": "Date:",
+  "backToOverviewLabel": "Back to overview",
+  "deleteLabel": "Delete",
+  "deleteReferralTitle": "Delete Referral",
+  "deleteReferralConfirmation": "Are you sure you want to delete this referral?",
+  "cancelLabel": "Cancel",
+  "rejectReferralMessage": "Reject referral",
+  "rejectLabel": "Reject",
+  "approveReferralMessage": "Approve referral",
+  "approveLabel": "Approve",
+  "signUpHereLabel": "Sign up here!",
+  "useFormToApplyLabel": "Use this form to apply.",
+  "nameHintText": "Name",
+  "nameRequiredError": "Name is a required field.",
+  "emailHintText": "example@email.com",
+  "emailInvalidError": "Enter a valid email address.",
+  "contactFieldRequiredError": "Email address or phone number is a required field.",
+  "phoneInvalidError": "Enter a valid phone number.",
+  "urlInvalidError": "That is not a valid URL.",
+  "handlingInformationSnackBar": "Handling information",
+  "sendButtonText": "Send",
+  "failedToRetrieveReferrals": "Failed to retrieve referrals from the backend.",
+  "failedToRetrieveReferrals": "Failed to retrieve referrals.",
+  "loadingData": "Loading data...",
+  "labelShareLink": "Share your link",
+  "titleReferralLink": "Referral Link",
+  "textReferralLink": "Use the referral link below to invite new users",
+  "buttonCopyLink": "Copy Link",
+  "applicantLabel": "Applicant:",
+  "emailLabel": "Provided Email:",
+  "dateLabel": "Submission Date:",
+  "noDataFound": "No data found",
+  "departmentTitle": "CZ Connect - Departments",
+  "referralOverview": "Referral Overview",
+  "menu": "Menu",
+  "loggedInAsPrefix": "Logged in as",
+  "login": "Login",
+  "logout": "Logout",
+  "register": "Register",
+  "userDashboard": "User Dashboard",
+  "recruitmentDashboard": "Recruitment Dashboard",
+  "applicationForm": "Application Form",
+  "charts": "Charts",
+  "referralOverview": "Referral Overview",
+  "departments": "Departments",
+  "deleteUserTitle": "Delete User",
+  "confirmDeleteUser": "Are you sure you want to delete the user?",
+  "noButton": "No",
+  "yesButton": "Yes",
+  "searchLabel": "Search",
+  "notApplicable": "Not Applicable",
+  "yesLabel": "Yes",
+  "noLabel": "No",
+  "deleteButton": "Delete",
+  "editButton": "Edit",
+  "unverifyButton": "Unverify",
+  "verifyButton": "Verify",
+  "noDataMessage": "No data found",
+  "departmentLabel": "Department:",
+  "verifiedLabel": "Verified:",
+  "roleLabel": "Role:",
+  "selectDepartmentHint": "Select Department",
+  "selectDepartmentError": "A department must be selected",
+  "selectRoleError": "A role must be selected",
+  "userUpdatedSnackBar": "User updated",
+  "editUser": "Edit User"
 }
+
+
