--- a/cz_app/lib/l10n/app_nl.arb
+++ b/cz_app/lib/l10n/app_nl.arb
@@ -22,5 +22,141 @@
   "registerEmailRequired": "Het e-mailveld is verplicht",
   "registerValidEmail": "Voer een geldig e-mailadres in",
   "registerContainerText": "Registeren voor CZ-medewerkers",
-  "registerSuccessMessage": "Aanmelding is successvol! Wacht nu tot uw account is geverifieerd."
+  "registerSuccessMessage": "Aanmelding is successvol! Wacht nu tot uw account is geverifieerd.",
+  "failedToRetrieveDepartments": "Het ophalen van de afdelingen vanuit de backend is mislukt.",
+  "appErrorPrefix": "Applicatie error:",
+  "somethingWentWrongErrorMessage": "Error: iets ging verkeerd.",
+  "createNewDepartmentText": "Maak hier een nieuwe afdeling aan.",
+  "newDepartmentNameHint": "Naam van de afdeling",
+  "newDepartmentNameRequired": "Een naam voor de afdeling is verplicht.",
+  "departmentCreatedSnackbarMessage": "Afdeling aangemaakt.",
+  "createDepartmentButtonText": "Afdeling aanmaken",
+  "departmentUpdatedSnackbarMessage": "Afdeling aangepast.",
+  "updateDepartmentButtonText": "Afdeling aanpassen",
+  "departmentOverviewHeaderText": "Overzicht van alle afdelingen.",
+  "noDepartmentsFoundText": "Er zijn geen afdelingen gevonden.",
+  "departmentNameHeaderText": "Afdelingsnaam",
+  "newDepartmentButtonText": "Nieuwe afdeling",
+  "editButtonText": "Bewerken",
+  "deleteButtonText": "Verwijderen",
+  "deleteDepartmentDialogTitle": "Afdeling verwijderen",
+  "deleteDepartmentDialogMessage": "Weet u zeker dat u deze afdeling wilt gaan verwijderen?",
+  "deleteDepartmentDialogCancelButtonText": "Annuleren",
+  "deleteDepartmentDialogDeleteButtonText": "Verwijderen",
+  "departmentOverviewText": "Overzicht van alle afdelingen.",
+  "noDepartmentsFoundText": "Geen afdelingen gevonden.",
+  "departmentNameColumnText": "Afdelingsnaam",
+  "newDepartmentButtonText": "Nieuwe afdeling",
+  "editButtonText": "Bewerken",
+  "deleteButtonText": "Verwijderen",
+  "deleteDepartmentDialogTitle": "Afdeling verwijderen",
+  "deleteDepartmentDialogMessage": "Weet je zeker dat je deze afdeling wilt verwijderen?",
+  "deleteDepartmentDialogCancelButtonText": "Annuleren",
+  "deleteDepartmentDialogDeleteButtonText": "Verwijderen",
+  "fetchDepartmentsError": "Kon afdelingen niet ophalen vanuit de backend.",
+  "fetchEmployeesError": "Kon medewerkers niet ophalen vanuit de backend.",
+  "fetchReferralsError": "Kon open sollicitaties niet ophalen vanuit de backend.",
+  "fetchEmployeesError": "Kon medewerkers niet ophalen vanuit de backend.",
+  "fetchReferralsError": "Kon open sollicitaties niet ophalen vanuit de backend.",
+  "noDepartmentsFound": "Geen afdelingen gevonden.",
+  "noEmployeesFound": "Geen medewerkers gevonden.",
+  "noOpenReferrals": "Op dit moment zijn er geen open sollicitaties.",
+  "employeeLabel": "Medewerker",
+  "emailLabel": "E-mail",
+  "referralCountLabel": "Aantal aandrachten",
+  "referralCountPrefix": "Aantal aandrachten:",
+  "nameLabel": "Naam",
+  "statusLabel": "Status",
+  "linkedinLabel": "LinkedIn",
+  "applicationDateLabel": "Gesolliciteerd op",
+  "linkCopiedMessage": "De link is gekopieerd naar je klembord.",
+  "openApplicationsButton": "Open Sollicitaties",
+  "fetchChartDataError": "Failed to fetch chart data from the backend.",
+  "failedToRetrieveReferrals": "Het ophalen van aandrachten vanuit de backend is mislukt.",
+  "referralLabel": "Aandrachten",
+  "totalReferralCountLabel": "Totaal aantal aandrachten",
+  "successfulReferralCountLabel": "Aantal succesvolle aandrachten",
+  "dataLoadError": "Er is iets fout gegaan met het inladen van de data.",
+  "applicantNameLabel": "Naam sollicitant",
+  "statusLabel": "Status",
+  "noReferralsFoundMessage": "Geen aandrachten gevonden.",
+  "referralsLoadFailedMessage": "Aandrachten inladen mislukt.",
+  "approvedLabel": "Goedgekeurd",
+  "pendingLabel": "In Afwachting",
+  "infoLabel": "Informatie over:",
+  "nameLabel": "Naam:",
+  "emailLabel": "Email:",
+  "phoneNumberLabel": "Telefoonnummer:",
+  "linkedinLabel": "Linkedin:",
+  "linkCopiedMessage": "De link is gekopieerd.",
+  "statusLabel": "Status:",
+  "dateLabel": "Datum:",
+  "backToOverviewLabel": "Terug naar overzicht",
+  "deleteLabel": "Verwijderen",
+  "deleteReferralTitle": "Referral Verwijderen",
+  "deleteReferralConfirmation": "Weet u zeker dat u deze referral wilt gaan verwijderen?",
+  "cancelLabel": "Annuleren",
+  "rejectReferralMessage": "Aandracht afkeuren",
+  "rejectLabel": "Afkeuren",
+  "approveReferralMessage": "Aandracht goedkeuren",
+  "approveLabel": "Goedkeuren",
+  "signUpHereLabel": "Meld je hier aan!",
+  "useFormToApplyLabel": "Gebruik dit formulier om te solliciteren.",
+  "nameHintText": "Naam",
+  "nameRequiredError": "Naam is een verplicht veld.",
+  "emailHintText": "voorbeeld@email.nl",
+  "emailInvalidError": "Voer een geldig e-mailadres in.",
+  "contactFieldRequiredError": "E-mailadres of telefoonnummer is een verplicht veld.",
+  "phoneInvalidError": "Voer een geldig telefoonnummer in.",
+  "urlInvalidError": "Dit is geen geldige URL.",
+  "handlingInformationSnackBar": "Informatie verwerken",
+  "sendButtonText": "Versturen",
+  "failedToRetrieveReferrals": "Het ophalen van aandrachten vanuit de backend is mislukt.",
+  "failedToRetrieveReferrals": "Het ophalen van aandrachten is mislukt.",
+  "loadingData": "Gegevens worden geladen...",
+  "labelShareLink": "Deel je link",
+  "titleReferralLink": "Referentielink",
+  "textReferralLink": "Gebruik de onderstaande referentielink om nieuwe gebruikers uit te nodigen",
+  "buttonCopyLink": "Kopieer de link",
+  "applicantLabel": "Aangedragen kandidaat:",
+  "emailLabel": "Opgegeven E-mail:",
+  "dateLabel": "Datum opgeving:",
+  "noDataFound": "Geen gegevens gevonden",
+  "departmentTitle": "CZ Connect - Afdelingen",
+  "referralOverview": "Aandrachten overzicht",
+  "menu": "Menu",
+  "loggedInAsPrefix": "Ingelogd als",
+  "login": "Inloggen",
+  "logout": "Uitloggen",
+  "register": "Registreren",
+  "userDashboard": "Gebruikersdashboard",
+  "recruitmentDashboard": "Wervingsdashboard",
+  "applicationForm": "Sollicitatieformulier",
+  "charts": "Grafieken",
+  "referralOverview": "Aandrachten Overzicht",
+  "departments": "Afdelingen",
+  "deleteUserTitle": "Gebruiker verwijderen",
+  "confirmDeleteUser": "Weet u zeker dat u de gebruiker wilt verwijderen?",
+  "noButton": "Nee",
+  "yesButton": "Ja",
+  "searchLabel": "Zoeken",
+  "notApplicable": "Niet van toepassing",
+  "yesLabel": "Ja",
+  "noLabel": "Nee",
+  "deleteButton": "Verwijderen",
+  "editButton": "Aanpassen",
+  "unverifyButton": "Onverifiëren",
+  "verifyButton": "Verifiëren",
+  "noDataMessage": "Geen data gevonden",
+  "departmentLabel": "Afdeling:",
+  "verifiedLabel": "Geverifieerd:",
+  "roleLabel": "Rol:",
+  "notApplicable": "Niet van toepassing",
+  "yesLabel": "Ja",
+  "noLabel": "Nee",
+  "selectDepartmentHint": "Selecteer Afdeling",
+  "selectDepartmentError": "Er moet een afdeling worden geselecteerd",
+  "selectRoleError": "Er moet een rol worden geselecteerd",
+  "userUpdatedSnackBar": "Gebruiker aangepast",
+  "editUser": "Gebruiker aanpassen"
 }
