--- a/cz_app/lib/l10n/app_en.arb
+++ b/cz_app/lib/l10n/app_en.arb
@@ -21,7 +21,6 @@
   "registerLastNameRequired": "The last name field is required",
   "registerEmailRequired": "The email field is required",
   "registerValidEmail": "Please enter a valid email address",
-  "registerContainerText": "Register for CZ employees",
   "registerSuccessMessage": "Registration is successful! Wait for your account to be verified.",
   "failedToRetrieveDepartments": "Failed to retrieve departments from the backend.",
   "appErrorPrefix": "Application error:",
@@ -44,18 +43,8 @@
   "deleteDepartmentDialogCancelButtonText": "Cancel",
   "deleteDepartmentDialogDeleteButtonText": "Delete",
   "departmentOverviewText": "Overview of all departments.",
-  "noDepartmentsFoundText": "No departments found.",
   "departmentNameColumnText": "Department Name",
-  "newDepartmentButtonText": "New Department",
-  "editButtonText": "Edit",
-  "deleteButtonText": "Delete",
-  "deleteDepartmentDialogTitle": "Delete Department",
-  "deleteDepartmentDialogMessage": "Are you sure you want to delete this department?",
-  "deleteDepartmentDialogCancelButtonText": "Cancel",
-  "deleteDepartmentDialogDeleteButtonText": "Delete",
   "fetchDepartmentsError": "Failed to fetch departments from the backend.",
-  "fetchEmployeesError": "Failed to fetch employees from the backend.",
-  "fetchReferralsError": "Failed to fetch open referrals from the backend.",
   "fetchEmployeesError": "Failed to fetch employees from the backend.",
   "fetchReferralsError": "Failed to fetch open referrals from the backend.",
   "noDepartmentsFound": "No departments found.",
@@ -73,23 +62,16 @@
   "openApplicationsButton": "Open Applications",
   "fetchChartDataError": "Failed to fetch chart data from the backend.",
   "failedToRetrieveReferrals": "Failed to retrieve referrals from the backend.",
-  "referralLabel": "Referrals",
-  "totalReferralCountLabel": "Total Referral Count",
-  "successfulReferralCountLabel": "Successful Referral Count",
-  "dataLoadError": "An error occurred while loading the data.",
+  "referralLabel": "Aandrachten",
+  "totalReferralCountLabel": "Totaal aantal aandrachten",
+  "dataLoadError": "Er is iets fout gegaan met het inladen van de data.",
   "applicantNameLabel": "Applicant Name",
-  "statusLabel": "Status",
   "noReferralsFoundMessage": "No referrals found.",
   "referralsLoadFailedMessage": "Failed to load referrals.",
   "approvedLabel": "Approved",
   "pendingLabel": "Pending",
   "infoLabel": "Information about:",
-  "nameLabel": "Name:",
-  "emailLabel": "Email:",
   "phoneNumberLabel": "Phone number:",
-  "linkedinLabel": "Linkedin:",
-  "linkCopiedMessage": "The link has been copied.",
-  "statusLabel": "Status:",
   "dateLabel": "Date:",
   "backToOverviewLabel": "Back to overview",
   "deleteLabel": "Delete",
@@ -111,16 +93,12 @@
   "urlInvalidError": "That is not a valid URL.",
   "handlingInformationSnackBar": "Handling information",
   "sendButtonText": "Send",
-  "failedToRetrieveReferrals": "Failed to retrieve referrals from the backend.",
-  "failedToRetrieveReferrals": "Failed to retrieve referrals.",
   "loadingData": "Loading data...",
   "labelShareLink": "Share your link",
   "titleReferralLink": "Referral Link",
   "textReferralLink": "Use the referral link below to invite new users",
   "buttonCopyLink": "Copy Link",
   "applicantLabel": "Applicant:",
-  "emailLabel": "Provided Email:",
-  "dateLabel": "Submission Date:",
   "noDataFound": "No data found",
   "departmentTitle": "CZ Connect - Departments",
   "referralOverview": "Referral Overview",
@@ -133,7 +111,6 @@
   "recruitmentDashboard": "Recruitment Dashboard",
   "applicationForm": "Application Form",
   "charts": "Charts",
-  "referralOverview": "Referral Overview",
   "departments": "Departments",
   "deleteUserTitle": "Delete User",
   "confirmDeleteUser": "Are you sure you want to delete the user?",
@@ -155,7 +132,11 @@
   "selectDepartmentError": "A department must be selected",
   "selectRoleError": "A role must be selected",
   "userUpdatedSnackBar": "User updated",
-  "editUser": "Edit User"
+  "editUser": "Edit User",
+  "approved": "Approved",
+  "denied": "Denied",
+  "pending": "Pending",
+  "successfulReferralCountLabel": "Successful Referral Count"
 }
 
 
