--- a/cz_app/lib/l10n/app_nl.arb
+++ b/cz_app/lib/l10n/app_nl.arb
@@ -21,7 +21,6 @@
   "registerLastNameRequired": "Het achternaamveld is verplicht",
   "registerEmailRequired": "Het e-mailveld is verplicht",
   "registerValidEmail": "Voer een geldig e-mailadres in",
-  "registerContainerText": "Registeren voor CZ-medewerkers",
   "registerSuccessMessage": "Aanmelding is successvol! Wacht nu tot uw account is geverifieerd.",
   "failedToRetrieveDepartments": "Het ophalen van de afdelingen vanuit de backend is mislukt.",
   "appErrorPrefix": "Applicatie error:",
@@ -43,19 +42,7 @@
   "deleteDepartmentDialogMessage": "Weet u zeker dat u deze afdeling wilt gaan verwijderen?",
   "deleteDepartmentDialogCancelButtonText": "Annuleren",
   "deleteDepartmentDialogDeleteButtonText": "Verwijderen",
-  "departmentOverviewText": "Overzicht van alle afdelingen.",
-  "noDepartmentsFoundText": "Geen afdelingen gevonden.",
-  "departmentNameColumnText": "Afdelingsnaam",
-  "newDepartmentButtonText": "Nieuwe afdeling",
-  "editButtonText": "Bewerken",
-  "deleteButtonText": "Verwijderen",
-  "deleteDepartmentDialogTitle": "Afdeling verwijderen",
-  "deleteDepartmentDialogMessage": "Weet je zeker dat je deze afdeling wilt verwijderen?",
-  "deleteDepartmentDialogCancelButtonText": "Annuleren",
-  "deleteDepartmentDialogDeleteButtonText": "Verwijderen",
   "fetchDepartmentsError": "Kon afdelingen niet ophalen vanuit de backend.",
-  "fetchEmployeesError": "Kon medewerkers niet ophalen vanuit de backend.",
-  "fetchReferralsError": "Kon open sollicitaties niet ophalen vanuit de backend.",
   "fetchEmployeesError": "Kon medewerkers niet ophalen vanuit de backend.",
   "fetchReferralsError": "Kon open sollicitaties niet ophalen vanuit de backend.",
   "noDepartmentsFound": "Geen afdelingen gevonden.",
@@ -78,18 +65,12 @@
   "successfulReferralCountLabel": "Aantal succesvolle aandrachten",
   "dataLoadError": "Er is iets fout gegaan met het inladen van de data.",
   "applicantNameLabel": "Naam sollicitant",
-  "statusLabel": "Status",
   "noReferralsFoundMessage": "Geen aandrachten gevonden.",
   "referralsLoadFailedMessage": "Aandrachten inladen mislukt.",
   "approvedLabel": "Goedgekeurd",
   "pendingLabel": "In Afwachting",
   "infoLabel": "Informatie over:",
-  "nameLabel": "Naam:",
-  "emailLabel": "Email:",
   "phoneNumberLabel": "Telefoonnummer:",
-  "linkedinLabel": "Linkedin:",
-  "linkCopiedMessage": "De link is gekopieerd.",
-  "statusLabel": "Status:",
   "dateLabel": "Datum:",
   "backToOverviewLabel": "Terug naar overzicht",
   "deleteLabel": "Verwijderen",
@@ -111,16 +92,12 @@
   "urlInvalidError": "Dit is geen geldige URL.",
   "handlingInformationSnackBar": "Informatie verwerken",
   "sendButtonText": "Versturen",
-  "failedToRetrieveReferrals": "Het ophalen van aandrachten vanuit de backend is mislukt.",
-  "failedToRetrieveReferrals": "Het ophalen van aandrachten is mislukt.",
   "loadingData": "Gegevens worden geladen...",
   "labelShareLink": "Deel je link",
   "titleReferralLink": "Referentielink",
   "textReferralLink": "Gebruik de onderstaande referentielink om nieuwe gebruikers uit te nodigen",
   "buttonCopyLink": "Kopieer de link",
   "applicantLabel": "Aangedragen kandidaat:",
-  "emailLabel": "Opgegeven E-mail:",
-  "dateLabel": "Datum opgeving:",
   "noDataFound": "Geen gegevens gevonden",
   "departmentTitle": "CZ Connect - Afdelingen",
   "referralOverview": "Aandrachten overzicht",
@@ -133,7 +110,6 @@
   "recruitmentDashboard": "Wervingsdashboard",
   "applicationForm": "Sollicitatieformulier",
   "charts": "Grafieken",
-  "referralOverview": "Aandrachten Overzicht",
   "departments": "Afdelingen",
   "deleteUserTitle": "Gebruiker verwijderen",
   "confirmDeleteUser": "Weet u zeker dat u de gebruiker wilt verwijderen?",
@@ -151,12 +127,14 @@
   "departmentLabel": "Afdeling:",
   "verifiedLabel": "Geverifieerd:",
   "roleLabel": "Rol:",
-  "notApplicable": "Niet van toepassing",
-  "yesLabel": "Ja",
-  "noLabel": "Nee",
   "selectDepartmentHint": "Selecteer Afdeling",
   "selectDepartmentError": "Er moet een afdeling worden geselecteerd",
   "selectRoleError": "Er moet een rol worden geselecteerd",
   "userUpdatedSnackBar": "Gebruiker aangepast",
-  "editUser": "Gebruiker aanpassen"
+  "editUser": "Gebruiker aanpassen",
+  "approved": "Geaccepteerd",
+  "denied": "Afgekeurd",
+  "pending": "In Afwachting",
+  "departmentOverviewText": "Overzicht van alle afdelingen.",
+  "departmentNameColumnText": "Afdelingsnaam"
 }
