--- a/cz_app/lib/l10n/app_nl.arb
+++ b/cz_app/lib/l10n/app_nl.arb
@@ -136,5 +136,11 @@
   "denied": "Afgekeurd",
   "pending": "In Afwachting",
   "departmentOverviewText": "Overzicht van alle afdelingen.",
-  "departmentNameColumnText": "Afdelingsnaam"
+  "departmentNameColumnText": "Afdelingsnaam",
+  "emailAlreadyRegisteredText": "E-mail is al geregistreerd",
+  "invalidRoleText": "Ongeldige rol",
+  "invalidDepartmentText": "Ongeldige afdeling",
+  "invalidEmailOrPasswordText": "Ongeldig e-mailadres of wachtwoord",
+  "userNotVerifiedText": "De gebruiker is niet geverifieerd",
+  "errorOccurredMessage": "Er is een fout opgetreden. Probeer het later opnieuw."
 }
