--- a/cz_app/lib/l10n/app_en.arb
+++ b/cz_app/lib/l10n/app_en.arb
@@ -142,7 +142,8 @@
   "invalidDepartmentText": "Invalid department",
   "invalidEmailOrPasswordText": "Invalid e-mail or password",
   "userNotVerifiedText": "The user isn't verified",
-  "errorOccurredMessage": "An error occurred. Please try again later."
+  "errorOccurredMessage": "An error occurred. Please try again later.",
+  "removeLabel": "Remove"
 }
 
 
