--- a/cz_app/lib/l10n/app_en.arb
+++ b/cz_app/lib/l10n/app_en.arb
@@ -62,9 +62,9 @@
   "openApplicationsButton": "Open Applications",
   "fetchChartDataError": "Failed to fetch chart data from the backend.",
   "failedToRetrieveReferrals": "Failed to retrieve referrals from the backend.",
-  "referralLabel": "Aandrachten",
-  "totalReferralCountLabel": "Totaal aantal aandrachten",
-  "dataLoadError": "Er is iets fout gegaan met het inladen van de data.",
+  "referralLabel": "Referrals",
+  "totalReferralCountLabel": "Total number of referrals",
+  "dataLoadError": "Something went wrong with loading the data.",
   "applicantNameLabel": "Applicant Name",
   "noReferralsFoundMessage": "No referrals found.",
   "referralsLoadFailedMessage": "Failed to load referrals.",
